removed a bug that maxed out z-index in hero photos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,19 +60,19 @@ body {
 
 .polaroid-trans-1{
     transform: rotate(16deg);
-    z-index: 1;
+    z-index: 0;
 }
 
 .polaroid-trans-2{
     transform: rotate(-8deg);
-    z-index: 2;
+    z-index: 1;
 }
 
 .polaroid-trans-3{
     position: relative;
     right: 30px;
     transform: rotate(10deg);
-    z-index: 1;
+    z-index: 0;
 }
 
 .polaroid-frame img {
